--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <section class="main-content">
       <h1>
 <a id="netspy2ban" class="anchor" href="#netspy2ban" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><img src="https://github.com/ftsiadimos/netspy2ban/blob/master/icons/netspy2ban.png" width="40" height="40" alt="Logo">NetSpy2Ban</h1>
- 
+
+<p><a href="https://github.com/ftsiadimos/netspy2ban/blob/master/icons/netspy2ban.png">logo</a> </p>
 
 <p>NetSpy2Ban is a graphic user interface program for Fedora 22 OS. The program serves three functions. The first function is to view connected network cards and their speed. The second is to allow real time monitoring of your network connections. Lastly, NetSpy2Ban includes a graphic user interface to provide user-friendly functionality for the Fail2Ban service.</p>
 
