--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="main-content">
-      <p><img src="https://raw.github.com/ftsiadimos/netspy2ban/blob/master/icons/ima1.png" alt="Image of Yaktocat"></p>
+      <p>(<a href="https://github.com/ftsiadimos/netspy2ban/blob/master/icons/ima1.png">https://github.com/ftsiadimos/netspy2ban/blob/master/icons/ima1.png</a>)</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ftsiadimos/netspy2ban">Netspy2ban</a> is maintained by <a href="https://github.com/ftsiadimos">ftsiadimos</a>.</span>
