Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,37 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Netspy2ban : GUI Networking Tool and Fail2ban Graphic User Interface for Fedora OS">
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+  <title>Netspy2ban</title>
+  <meta name="description" content="GUI Networking Tool and Fail2ban Graphic User Interface for Fedora OS">
 
-    <title>Netspy2ban</title>
-  </head>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <body>
+</head>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ftsiadimos/netspy2ban">View on GitHub</a>
+<body>
 
-          <h1 id="project_title">Netspy2ban</h1>
-          <h2 id="project_tagline">GUI Networking Tool and Fail2ban Graphic User Interface for Fedora OS</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/ftsiadimos/netspy2ban/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/ftsiadimos/netspy2ban/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Netspy2ban</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">GUI Networking Tool and Fail2ban Graphic User Interface for Fedora OS</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/ftsiadimos/netspy2ban/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/ftsiadimos/netspy2ban/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/ftsiadimos/netspy2ban" class="code">View Netspy2ban on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h1>
 <a id="netspy2ban" class="anchor" href="#netspy2ban" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><img src="https://raw.githubusercontent.com/ftsiadimos/netspy2ban/master/icons/netspy2ban.png" width="40" height="40" alt="Logo">NetSpy2Ban</h1>
  
 
@@ -64,18 +69,26 @@
 <br>
 <p align="center">
 <img src="https://raw.githubusercontent.com/ftsiadimos/netspy2ban/master/icons/task2ima.png" width="350" height="170" alt="notify-image2"></p>
-      </section>
+        </article>
+      </div>
     </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/ftsiadimos" class="avatar"><img src="https://avatars0.githubusercontent.com/u/11952266?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/ftsiadimos">ftsiadimos</a> maintains <a href="https://github.com/ftsiadimos/netspy2ban">Netspy2ban</a></p>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Netspy2ban maintained by <a href="https://github.com/ftsiadimos">ftsiadimos</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
 
-    
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/ftsiadimos/netspy2ban/tarball/master" class="tar">tar</a><a href="https://github.com/ftsiadimos/netspy2ban/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
 
-  </body>
+  
+</body>
 </html>
